# react-native-fast-crypto

./: .eslintrc.json  .flowconfig  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  README.md  base64-binary.js  build-deps  build-secp256k1.sh  eslint.config.mjs  generate-sums.sh  index.d.ts  index.js  mkabc  package-lock.json  package.json  react-native-fast-crypto.podspec  shasums.txt  tsconfig.json  update-test.sh
.github/: PULL_REQUEST_TEMPLATE.md
FastCryptoTest/: .gitignore  README.md  app.json  babel.config.js  index.js  index.ts  metro.config.js  package.json  tsconfig.json
FastCryptoTest/android/: build.gradle  gradle.properties  settings.gradle
FastCryptoTest/android/app/: build.gradle
FastCryptoTest/ios/: Podfile
FastCryptoTest/ios/FastCryptoTest/: AppDelegate.m  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
FastCryptoTest/ios/FastCryptoTest.xcodeproj/: project.pbxproj
FastCryptoTest/ios/FastCryptoTest.xcworkspace/: contents.xcworkspacedata
FastCryptoTest/src/: FastCryptoTest.tsx  tests.ts  utf8.ts
android/: .project  build.gradle  format-java.sh
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  crypto_bridge.cpp  fast_crypto.h  native-crypto.cpp  native-crypto.h  native_crypto.cpp
android/src/main/cpp/scrypt/: crypto_scrypt.c  readme.md  sha256.c  sysendian.h
docs/guides/: getting-started.md
docs/patterns/: buffer-handling.md
docs/references/: api-reference.md
ios/: RNFastCrypto.h  RNFastCrypto.m  RNFastCrypto.podspec  RNReactNativeFastCrypto.h  RNReactNativeFastCrypto.m  RNReactNativeFastCrypto.podspec
ios/Headers/: native-crypto.h
ios/RNFastCrypto.xcodeproj/: project.pbxproj
ios/RNReactNativeFastCrypto.xcodeproj/: project.pbxproj
ios/secp256k1.xcframework/: Info.plist
native-libs/: .gitignore  Makefile
native-libs/codegen/: paymentrequest.pb.cc  paymentrequest.pb.h
native-libs/minilibs/abcd/: ABC.h
native-libs/minilibs/catch/: readme.md
native-libs/minilibs/git-sync/: .gitignore  Makefile  main.c  readme.md  sync.c  sync.h  test.c
native-libs/minilibs/libbitcoin-client/: client.hpp  message_stream.hpp  obelisk_codec.cpp  obelisk_codec.hpp  obelisk_router.cpp  obelisk_router.hpp  obelisk_types.hpp  sleeper.hpp  zeromq_socket.cpp  zeromq_socket.hpp
native-libs/minilibs/scrypt/: Makefile  crypto_scrypt.c  (+4 more)
native-libs/src/: Version.h.in  native-crypto.cpp  native-crypto.h
native-libs/test/: README.md  main.cpp
scripts/: build-native.ts  update-tests.sh
scripts/utils/: android-tools.js  android-tools.ts  common.ts  ios-tools.ts
src/: index.ts  indexRNFastCrypto.js  native-crypto.cpp  react-native.d.ts
src/jni/: exports.map  jni.cpp
windows/: RNFastCrypto.sln  RNReactNativeFastCrypto.sln
windows/RNFastCrypto/: RNFastCrypto.csproj  RNFastCryptoModule.cs  RNFastCryptoPackage.cs
windows/RNReactNativeFastCrypto/: RNReactNativeFastCrypto.csproj  RNReactNativeFastCryptoModule.cs  RNReactNativeFastCryptoPackage.cs
(+53 files in other folders)
